# rules_appimage

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  .markdownlintrc  .pre-commit-config.yaml  BUILD  BazelizedMksquashfs.md  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md  RELEASE.md  Release.md  WORKSPACE  deps.bzl  extensions.bzl  pyproject.toml  renovate.json  requirements.in  requirements.txt  setup.bzl
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/: super-linter.env
.github/workflows/: ci.yaml  docs.yml  publish.yaml  release.yaml  release_prep.sh  rolling.yaml
.trunk/: trunk.yaml
appimage/: BUILD  appimage.bzl  defs.bzl  toolchain.bzl
appimage/private/: BUILD  launch.c  mkappdir.py  mkappimage.sh  mkapprun.bzl  runfiles.bzl
appimage/private/tool/: BUILD  cli.py  mkappimage.py  tool.py
appimage/private/tool/tests/: BUILD  test_cli.py  test_mkappimage.py  test_tool.py
docs/: BUILD  defs.md  index.md  stardoc_rules.bzl
docs/tests/: BUILD  smoke_test.sh
examples/: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  hello.py  integration_test.sh
examples/resources/: BUILD
tests/: BUILD  appimage_data_filegroup.txt  appimage_test_cc_with_sh_test.sh  data.txt  mkappdir_test.py  runfiles_test.sh  test.cc  test.py  test_appimage.py  test_mount-is-readonly.sh  testrules.bzl  transitioned_binary_test.cc  transitioned_binary_wrapper.sh
tests/analysis_tests/: BUILD  tests.bzl
tests/build_working_directory/: BUILD  entrypoint.sh  test.sh
tests/cc_runfiles/: BUILD  test.cpp  test_appimage_isolated.yaml
tests/cc_runfiles/container/: BUILD  test_appimage_isolated.yaml
tests/determinism/: reproducible_shas.sh
tests/dir/: BUILD  link_to_file_in_dir2  link_to_link_to_file_in_dir2  symlink_to_file_in_dir
tests/dir/subdir/: invalid_link  symlink_to_local_file
tests/dir2/: file_in_dir.txt
tests/py_runfiles/: BUILD  test.py
tests/relative_symlink_so/: BUILD  foo.S  libfoo.so.1
tests/root_symlink/: BUILD  root_runfiles_symlink.bzl  test.sh
tests/rules_pycross/: BUILD  README.md  pyproject.toml  test.py  test_appimage_isolated.yaml
tests/tool/tests/: BUILD  test_cli.py  test_mkappimage.py
