"""AppImage rules for Bazel."""

module(
    name = "rules_appimage",
    version = "1.5.0",
)

bazel_dep(name = "bazel_skylib", version = "1.5.0", dev_dependency = True)
bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "rules_cc", version = "0.0.9", dev_dependency = True)
rules_appimage = use_extension("//:extensions.bzl", "appimage_ext_dependencies")
use_repo(
    rules_appimage,
    "appimage_runtime_aarch64",
    "appimage_runtime_i386",
    "appimage_runtime_armv7e-m",
    "appimage_runtime_x86_64",
    "appimagetool.png",
    "squashfs-tools",
)

register_toolchains("//appimage:all")

# Dev dependencies below

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
sysroot = http_archive(
    name = "debian_bullseye_amd64_sysroot",
    build_file_content = "filegroup(name='debian_bullseye_amd64_sysroot', srcs=glob(['*/**']), visibility=['//visibility:public'])",
    url = "https://commondatastorage.googleapis.com/chrome-linux-sysroot/toolchain/4c00ba2ad61ca7cc39392f192aa39420e086777c/debian_bullseye_amd64_sysroot.tar.xz",
    dev_dependency = True,
)
bazel_dep(name = "toolchains_llvm", version = "0.10.3", dev_dependency = True)
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(llvm_version = "16.0.4", sysroot = {"": "@debian_bullseye_amd64_sysroot"})
use_repo(llvm, "llvm_toolchain")
register_toolchains("@llvm_toolchain//:all", dev_dependency = True)

bazel_dep(name = "rules_python", version = "0.27.1")
python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)
python.toolchain(python_version = "3.11")
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip", dev_dependency = True)
pip.parse(
    hub_name = "rules_appimage_py_deps",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "rules_appimage_py_deps")
