[project]
name = "rules_appimage"
requires-python = ">=3.9"

[tool.black]
line-length = 120

[tool.isort]
extend_skip_glob = ["bazel-*"]
line_length = 120
profile = "black"

[tool.mypy]
allow_untyped_calls = true
exclude = "bazel-.*"
explicit_package_bases = true
follow_imports = "silent"
ignore_missing_imports = false
mypy_path = ["bazel-rules_appimage/external"]
namespace_packages = true
strict = true

[tool.pyright]
exclude = ["bazel-*", "examples/bazel-*"]

[tool.ruff.lint]
select = [
  "B",
  "D",
  "E",
  "F",
  "I",
  "N",
  "Q",
  "W",
  "UP",
  "COM",
  "C4",
  "DTZ",
  "PIE",
  "PT",
  "SIM",
  "TID",
  "TCH",
  "ARG",
  "PTH",
  "ERA",
  "PL",
  "TRY",
  "PERF",
  "RUF",
]
ignore = ["COM812", "D103", "D203", "D213", "PLR2004", "PLR5501", "PLR0912", "TRY003"]

[tool.ruff]
line-length = 120

[tool.yamlfix]
line_length = 120
indent_sequence = 2
indent_offset = 0
