"""Example workspace using rules_appimage."""

module(name = "rules_appimage_example")

# Real repos should do:
#     bazel_dep(name = "rules_appimage", version = "1.6.0")
# But instead we're using this:
bazel_dep(name = "rules_appimage")
local_path_override(
    module_name = "rules_appimage",
    path = "../",
)

bazel_dep(name = "rules_python", version = "0.29.0")
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11")
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "py_deps",
    python_version = "3.11",
    requirements_lock = "requirements.txt",
)
use_repo(pip, "py_deps")
