"""Example workspace using rules_appimage."""

module(name = "rules_appimage_example")

# Real repos should do:
#     bazel_dep(name = "rules_appimage", version = "1.16.2")
# (or whatever the latest version is)
# But instead we're using this:
bazel_dep(name = "rules_appimage")
local_path_override(
    module_name = "rules_appimage",
    path = "../",
)

bazel_dep(name = "rules_python", version = "1.9.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.14")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "py_deps",
    python_version = "3.14",
    requirements_lock = "requirements.txt",
)
use_repo(pip, "py_deps")
